INTYGFV-15069: Updated test-data instead of adding new UtlatandeTyp-Enum.